--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agile-audio-player",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/agile-audio-player.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js"
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/UUX-Brasil/agile-audio-player#readme",
   "devDependencies": {
-    "webpack": "^1.13.2"
+    "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-print": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-run": "^1.6.8",
+    "gulp-uglify": "^1.2.0",
+    "run-sequence": "^1.1.1"
   }
 }
